# crx30ia_motion_planning

./: CMakeLists.txt  package.xml
launch/: camera_viewer.launch.py  motion_planning.launch.py  robot_bringup.launch.py  simple_test.launch.py
src/: camera_viewer.cpp  grasp.cpp  move_to_pose.cpp  pedestral_setup_scene.cpp  pick_place.cpp  planner.cpp  publish_goal.cpp  publish_waypoints.cpp  read_current_pose.cpp  setup_scene.cpp  simple_goal.cpp  trace_waypoints.cpp
test/: publish_goal.cpp
